# mmuhttpd

./: Cargo.toml  Readme.md  rust-toolchain.toml
.github/workflows/: rust.yml
demo/: index.html
src/: browser.rs  ext_slice.rs  fs.rs  help.txt  main.rs  mime.rs  response.rs  run.rs  settings.rs  webdav.rs
